name:                  servant-exceptions
version:               0.1.0
synopsis:              Extensible exceptions for servant APIs
homepage:              https://github.com/ch1bo/servant-exceptions#readme
license:               BSD3
license-file:          LICENSE
author:                Sebastian Nagel
maintainer:            sebastian.nagel@ncoding.at
copyright:             2017 Sebastian Nagel
category:              Web
build-type:            Simple
extra-source-files:    CHANGELOG.md
                     , README.md
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Exception
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , exceptions
                     , http-media
                     , http-types
                     , mtl
                     , servant
                     , servant-server
                     , text
                     , wai
  default-language:    Haskell2010

executable example
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , exceptions
                     , http-types
                     , servant-server
                     , servant-exceptions
                     , text
                     , warp
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/ch1bo/servant-exceptions
