name:                  example
version:               0.1.2
description:           Extensible exceptions for servant APIs
homepage:              https://github.com/ch1bo/servant-exceptions#readme
license:               BSD3
license-file:          LICENSE
author:                Sebastian Nagel
maintainer:            sebastian.nagel@ncoding.at
copyright:             2017-2020 Sebastian Nagel
category:              Web
build-type:            Simple
cabal-version:         >=1.10

executable example
  hs-source-dirs:      .
  main-is:             Main.hs
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring
                     , exceptions
                     , http-client
                     , http-types
                     , servant-client
                     , servant-server
                     , servant-exceptions
                     , servant-exceptions-client
                     , servant-exceptions-server
                     , text
                     , warp
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ch1bo/servant-exceptions
