name:                  servant-exceptions-client
version:               0.3.0
synopsis:              Extensible exceptions for servant APIs
description: `servant-exceptions-client` provides the `servant-client` related
                       parts for `servant-exceptions`. Namely it uses the
                       declared exceptions to parse responses and provide
                       appropriate values to the client.
homepage:              https://github.com/ch1bo/servant-exceptions#readme
license:               BSD3
license-file:          LICENSE
author:                Sebastian Nagel
maintainer:            sebastian.nagel@ncoding.at
copyright:             2017-2020 Sebastian Nagel
category:              Web
build-type:            Simple
extra-source-files:    CHANGELOG.md
                     , README.md
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Exception.Client
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , exceptions
                     , http-media
                     , http-types
                     , mtl
                     , servant
                     , servant-client-core
                     , servant-exceptions
                     , text
  default-language:    Haskell2010
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

source-repository head
  type:     git
  location: https://github.com/ch1bo/servant-exceptions
