name:                  servant-exceptions-server
version:               0.1.2
synopsis:              Extensible exceptions for servant API servers
description: `servant-exceptions-server` provides the `servant-server` related
                       parts for `servant-exceptions`. Namely it catches
                       declared exceptions and renders responses using the
                       handler content-type.
homepage:              https://github.com/ch1bo/servant-exceptions#readme
license:               BSD3
license-file:          LICENSE
author:                Sebastian Nagel
maintainer:            sebastian.nagel@ncoding.at
copyright:             2017 Sebastian Nagel
category:              Web
build-type:            Simple
extra-source-files:    CHANGELOG.md
                     , README.md
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Exception.Server
  build-depends:       base >= 4.7 && < 5
                     , exceptions
                     , http-media
                     , http-types
                     , mtl
                     , servant >= 0.11
                     , servant-exceptions
                     , servant-server >= 0.11
                     , text
                     , wai
  default-language:    Haskell2010
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

source-repository head
  type:     git
  location: https://github.com/ch1bo/servant-exceptions
