name:                  servant-exceptions
version:               0.2.1
synopsis:              Extensible exceptions for servant APIs
description: `servant-exceptions` provides a `Throw` combinator to declare what
                       types of errors an API might throw. The server
                       implementation catches them and allows for a canonical
                       encoding using servant content-type machinery.
homepage:              https://github.com/ch1bo/servant-exceptions#readme
license:               BSD3
license-file:          LICENSE
author:                Sebastian Nagel
maintainer:            sebastian.nagel@ncoding.at
copyright:             2017 Sebastian Nagel
category:              Web
build-type:            Simple
extra-source-files:    CHANGELOG.md
                     , README.md
cabal-version:         >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Servant.Exception
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , exceptions
                     , http-types
                     , servant
                     , text
  default-language:    Haskell2010
  ghc-options: -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wcompat

source-repository head
  type:     git
  location: https://github.com/ch1bo/servant-exceptions
